--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -4,6 +4,11 @@ on:
     branches:
       - main
 jobs:
+  setup:
+    runs-on: ubuntu-18.04
+    steps:
+    - run: |
+        npm cache clean
   build:
     runs-on: ubuntu-18.04
     steps:
