--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -10,12 +10,14 @@ jobs:
     - run: |
         npm cache clean --force
   build:
+    needs: setup
     runs-on: ubuntu-18.04
     steps:
     - run: |
         npm install
         npm run build 
   deploy:
+    needs: build
     runs-on: ubuntu-18.04
     steps:  
     - run: |
