--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - run: |
-        cd /path/to/project
+    - uses: actions/checkout@main
         npm cache clean --force
   build:
     needs: setup
