--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -15,7 +15,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@main
+ #   - uses: actions/checkout@main
     - run: |
         npm install
         npm run build 
@@ -24,7 +24,7 @@ jobs:
     needs: build
     runs-on: ubuntu-18.04
     steps:  
-    - uses: actions/checkout@main
+ #   - uses: actions/checkout@main
     - run: |
         ls
         rm -rf public
