--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -14,4 +14,4 @@ jobs:
         npm run build 
         ls
         rm -rf public
-        mkdir public && cp -rf /dist/* public
+        mkdir public && cp -rf dist/* public
