--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -26,3 +26,4 @@ jobs:
         repo: 950288/web
         target_branch: dist
         build_dir: dist
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
