--- a/package.json
+++ b/package.json
@@ -12,6 +12,20 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@tiptap/extension-bold": "^2.0.0-beta.209",
+    "@tiptap/extension-bullet-list": "^2.0.0-beta.209",
+    "@tiptap/extension-code": "^2.0.0-beta.209",
+    "@tiptap/extension-heading": "^2.0.0-beta.209",
+    "@tiptap/extension-image": "^2.0.0-beta.209",
+    "@tiptap/extension-italic": "^2.0.0-beta.209",
+    "@tiptap/extension-link": "^2.0.0-beta.209",
+    "@tiptap/extension-list-item": "^2.0.0-beta.209",
+    "@tiptap/extension-subscript": "^2.0.0-beta.209",
+    "@tiptap/extension-superscript": "^2.0.0-beta.209",
+    "@tiptap/extension-underline": "^2.0.0-beta.209",
+    "@tiptap/html": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "@tiptap/vue-3": "^2.0.0-beta.209",
     "@vueuse/core": "^9.8.2",
     "bulma": "^0.9.4",
     "sass": "^1.57.1",
@@ -34,6 +48,7 @@
     "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "tiptap-utils": "^1.13.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vitest": "^0.25.6",
