--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
+  "extends" : "./tsconfig.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue","src/routes.json","src/*"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
