--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tiptap/vue-3": "^2.0.3",
     "@vueuse/core": "^10.1.0",
     "bulma": "^0.9.4",
+    "highlight.js": "^11.8.0",
     "sass": "^1.62.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
